migrate redis to mongodb add some new router
